# lsp-types

./: .gitignore  Cargo.toml  README.md
crates/io/: Cargo.toml  README.md
crates/io/examples/: yaya-async-lsp.rs  yaya-lsp.rs
crates/io/src/: blocking.rs  lib.rs  main.rs  non_blocking.rs  utils.rs
crates/tools/: Cargo.toml  manual.json  types.json  types.ts
crates/tools/src/: content.md  main.rs
crates/types/: Cargo.toml  README.md
crates/types/src/: lib.rs  part1.rs  part2.rs  part3.rs  patch.rs
examples/yaya/: CHANGELOG.md  README.md  extension.js  package-lock.json  package.json
examples/yaya-lsp/: Cargo.toml
examples/yaya-lsp/src/: main.rs
