[package]
name = "lsp-io"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lsp-ty = { path = "../types" }
bytes = "1"
serde_json = "1"
serde = "1"
tracing = "0.1"

[dev-dependencies]

tracing-subscriber = "0.3"
clap = { version = "3", features = ["derive"] }
