[package]
name = "lsp-io"
version = "0.2.1"
edition = "2021"
description = "simple wrapper for LSP message read/write"
license-file = "../../LICENSE"
repository = "https://github.com/PrivateRookie/lsp-types"
homepage = "https://privaterookie.github.io/lsp-types/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["blocking"]
blocking = []
async = ["tokio", "lsp-ty/async"]

[[example]]
name = "yaya-async-lsp"
required-features = ["async"]

[dependencies]
lsp-ty = { path = "../types", version = "0.2.1" }
bytes = "1"
serde_json = "1"
serde = "1"
tracing = "0.1"
tokio = { version = "1.17", features = ["net", "io-util"], optional = true }

[dev-dependencies]
tracing-subscriber = "0.3"
clap = { version = "3", features = ["derive"] }
tokio = { version = "1.17", features = ["full"] }
