[package]
name = "lsp-ty"
version = "0.2.1"
edition = "2021"
description = "type definitons for LSP"
license-file = "../../LICENSE"
repository = "https://github.com/PrivateRookie/lsp-types"
homepage = "https://privaterookie.github.io/lsp-types/"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
async = []

[dependencies]
url = { version = "2.2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
schemafy_core = "0.6"
